# chipyard

./: .gitmodules  build.sbt  variables.mk
generators/chipyard/src/main/scala/config/: BoomConfigs.scala
tests/: CMakeLists.txt  bin-search.c  csr.c  jumparound.c  memcpy.c  parallel.c  pmu_defs.h  prefetcher.c  ptr-chase.c  read_counters.c  small_tma_defs.h  stress-prefetcher.c  thousandadds.c  tma_defs.h  trigger.h  util.h
tests/perf-ubenchmarks/: CMakeLists.txt  README.md  prefetcher.c
